还差一个搜索了

--- a/org.lm.spring.quick/src/main/resources/templates/entity/create.html
+++ b/org.lm.spring.quick/src/main/resources/templates/entity/create.html
@@ -20,7 +20,7 @@
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
 
-	<form method="post" enctype="multipart/form-data" action=""
+	<form method="post"   action=""
 		th:action="@{~/entity/create/__${entityName}__}"
 		class="form-horizontal">
 		<div class="modal-header">
@@ -62,20 +62,13 @@
 							type="hidden" th:field="*{__${c.columnName}__.id}" />
 					</div>
 				</div>
-				<div th:case="File"	th:with=" name='$(\'[name='+${c.columnName}+']\')'">
-					<a th:if="${not #strings.isEmpty(c.getValue(entity))}"
-						th:href="@{~/__${c.getValue(row)}__}">download</a> 
-					<input type="file"  th:name="${c.columnName}"  /> 
-					<input type="hidden" th:field="*{__${c.columnName}__}"  /> 
-					<a href="#" th:onclick="${ name+'.val('''')' }">删除</a>
+				
+				<div th:case="File"  class="_uploadContainer row"   	 th:attrappend="mutilfile=${T(java.util.List).isAssignableFrom(c.getJavaType())?'true':'false' }">	
+					<div class="col-sm-6"><input type="file"  th:hidName="${c.columnName}"   /> </div>
 				</div>
 
-				<div th:case="Img" class="thumbnail"  th:with=" name='$(\'[name='+${c.columnName}+']\')'">
-					<img src=""
-					th:src="@{~/__${c.getValue(entity)}__}" /> 
-					<input type="file" th:name="${c.columnName}" /> 
-					<input type="hidden" th:field="*{__${c.columnName}__}"    /> 
-					<a href="#" th:onclick="${ name+'.val('''')' }">删除</a>
+				<div th:case="Img" class="thumbnail _uploadContainer row"	  >
+					<div class="col-sm-6"><input type="file" th:hidName="${c.columnName}"   /> </div>
 				</div>
 
 
