--- a/org.lm.spring.quick/src/main/resources/templates/inputTest.html
+++ b/org.lm.spring.quick/src/main/resources/templates/inputTest.html
@@ -6,19 +6,22 @@
 </head>
 <body>
 	<div layout:fragment="content">
-		<form method="post" action="post" class="form-horizontal" th:object="${user}">
+		<form method="post" action="post" class="form-horizontal"
+			th:object="${user}">
 			<div class="form-group">
 				<lable class="col-sm-3">name</lable>
 				<div class="col-sm-8">
 					<input th:field="*{username}" type="text" class="form-control">
-					<p th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Incorrect date</p>
+					<p th:if="${#fields.hasErrors('username')}" th:errors="*{username}">Incorrect
+						date</p>
 				</div>
 			</div>
 
 			<div class="form-group">
 				<lable class="col-sm-3">regdate</lable>
 				<div class="col-sm-8">
-					<input name="regDate" type="date" class="form-control" th:value="*{#dates.format(regDate,'YYY-MM-dd')}">
+					<input name="regDate" type="date" class="form-control"
+						th:value="*{#dates.format(regDate,'YYY-MM-dd')}">
 				</div>
 			</div>
 
@@ -79,73 +82,86 @@
 			</div>
 
 			<div class="form-group uploader" id="uploadPanel">
-				<input type="file"  name="file"  multiple="multiple" id="file1"
-					class="form-controll" />
-					<input type="file"  name="file"  multiple="multiple" id="file2"
+				<input type="file" name="file" multiple="multiple" id="file1"
 					class="form-controll" />
 			</div>
 			<div class="form-group">
-				<div class="progress">
-					<div class="progress-bar" style="width:10%"></div>
+				<label class="control-label col-sm-2">文件</label>
+				<div class="col-sm-8">
+					<div class="row  _uploadContainer" 	mutilfile="true"  fileType="image/*">
+						<div class="col-sm-6">
+							<input type="file" name="pics">
+						</div>
+					</div>
 				</div>
-				<div id="msg"></div>
+			</div>
+			<div class="form-group">
+				<label class="control-label col-sm-2">文件2</label>
+				<div class="col-sm-8">
+					<div class="row  _uploadContainer"  fileType="image/*">
+						<div class="col-sm-6">
+							<input type="file" name="pics2">
+						</div>
+					</div>
+				</div>
 			</div>
 		</form>
-		
-		<script type="text/javascript">
-	var msg="";
-		$(function() {
-			$('form').dmUploader(
-					{
-						url : '/upload',
-						dataType : 'json',
-						onInit : function() {
-							msg+="uploader component init ---\n";
-							$('#msg').html(msg);
-						},
-						onBeforeUpload : function(id) {
-							msg+="before upload\n";
-							$('#msg').html(msg);
-						},
-						onNewFile : function(id, file) {
-							msg+="add file quque to upload ---\n";
-							$('#msg').html(msg);
-						},
-						onComplete : function() {
-							 
-						},
-						onUploadProgress : function(id, percent) {
-							var percentStr = percent + '%';
 
-							$('.progress-bar').css('width',percentStr);
-						},
-						onUploadSuccess : function(id, data) {
-							msg+="upload success"+id+" \n" ;
-							$('#msg').html(msg);
-							$('#msg').append($('<a/>').attr('href','http://localhost:90'+data.url).text("下载"));
-							
-						},
-						onUploadError : function(id, message) {
-							msg+='upload error '+message+'\n';
-							$('#msg').html(msg);
-						},
-						onFileTypeError : function(file) {
-						  msg+="文件累成错误\n";
-							$('#msg').html(msg);
-						},
-						onFileSizeError : function(file) {
-							msg+="文件大小错误\n";
-							$('#msg').html(msg);
-						},
-						onFallbackMode : function(message) {
-							msg+="fallbackMode "+message+"\n";
-							$('#msg').html(msg);
-						}
-					});
-		})
-	</script>
+		<script type="text/javascript">
+			var msg = "";
+			/* 	$(function() {
+					$('form').dmUploader(
+							{
+								url : '/upload',
+								dataType : 'json',
+								onInit : function() {
+									msg+="uploader component init ---\n";
+									$('#msg').html(msg);
+								},
+								onBeforeUpload : function(id) {
+									msg+="before upload\n";
+									$('#msg').html(msg);
+								},
+								onNewFile : function(id, file) {
+									msg+="add file quque to upload ---\n";
+									$('#msg').html(msg);
+								},
+								onComplete : function() {
+									 
+								},
+								onUploadProgress : function(id, percent) {
+									
+									var percentStr = percent + '%';
+
+									$('.progress-bar').css('width',percentStr);
+								},
+								onUploadSuccess : function(id, data) {
+									msg+="upload success"+id+" \n" ;
+									$('#msg').html(msg);
+									$('#msg').append($('<a/>').attr('href','http://localhost:90'+data.url).text("下载"));
+									
+								},
+								onUploadError : function(id, message) {
+									msg+='upload error '+message+'\n';
+									$('#msg').html(msg);
+								},
+								onFileTypeError : function(file) {
+								  msg+="文件累成错误\n";
+									$('#msg').html(msg);
+								},
+								onFileSizeError : function(file) {
+									msg+="文件大小错误\n";
+									$('#msg').html(msg);
+								},
+								onFallbackMode : function(message) {
+									msg+="fallbackMode "+message+"\n";
+									$('#msg').html(msg);
+								}
+							});
+				}) */
+		</script>
 	</div>
 
-	
+
 </body>
 </html>
